--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -58,6 +58,7 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.15.0
+    restart: always
     environment:
       "discovery.type": "single-node"
     ports:
