--- a/contrib/quickstart/oathkeeper/access-rules.yml
+++ b/contrib/quickstart/oathkeeper/access-rules.yml
@@ -1,22 +1,22 @@
-- id: "ory:kratos:public"
-  upstream:
-    preserve_host: true
-    url: "http://kratos:4433"
-    strip_path: /.ory/kratos/public
-  match:
-    url: "http://127.0.0.1:4455/.ory/kratos/public/<**>"
-    methods:
-      - GET
-      - POST
-      - PUT
-      - DELETE
-      - PATCH
-  authenticators:
-    - handler: noop
-  authorizer:
-    handler: allow
-  mutators:
-    - handler: noop
+#- id: "ory:kratos:public"
+#  upstream:
+#    preserve_host: true
+#    url: "http://kratos:4433"
+#    strip_path: /.ory/kratos/public
+#  match:
+#    url: "http://127.0.0.1:4455/.ory/kratos/public/<**>"
+#    methods:
+#      - GET
+#      - POST
+#      - PUT
+#      - DELETE
+#      - PATCH
+#  authenticators:
+#    - handler: noop
+#  authorizer:
+#    handler: allow
+#  mutators:
+#    - handler: noop
 
 - id: "ory:service-ui:anonymous"
   upstream:
@@ -26,6 +26,10 @@
     url: "http://127.0.0.1:4455/<**>"
     methods:
       - GET
+      - POST
+      - PUT
+      - DELETE
+      - PATCH
   authenticators:
     - handler: cookie_session
     - handler: anonymous
