--- a/service-ui/package.json
+++ b/service-ui/package.json
@@ -33,6 +33,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "dev": "BROWSER=none PORT=80 react-scripts start",
     "codegen": "openapi --input http://localhost:8080/v2/api-docs --output ./src/generated"
   },
   "eslintConfig": {
