check for current user

--- a/service-product/src/main/resources/application.properties
+++ b/service-product/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#security.oauth2.resource.jwk.key-set-uri=http://oathkeeper:4456/.well-known/jwks.json
 ##########################
 #           DB           #
 ##########################
