--- a/service-api-gateway/templates/nginx.conf.template
+++ b/service-api-gateway/templates/nginx.conf.template
@@ -2,6 +2,15 @@ server {
     listen 80;
     server_name $NGINX_APP_HOST;
 
+    location /sessions {
+        proxy_pass         ${KRATOS_PUBLIC_ENDPOINT}/sessions;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+    }
+
     location /self-service {
         proxy_pass         ${KRATOS_PUBLIC_ENDPOINT}/self-service;
         proxy_redirect     off;
