--- a/contrib/quickstart/oathkeeper/oathkeeper.yml
+++ b/contrib/quickstart/oathkeeper/oathkeeper.yml
@@ -46,7 +46,7 @@ errors:
         verbose: true
 
 access_rules:
-  matching_strategy: glob
+  matching_strategy: regexp
   repositories:
     - file:///etc/config/oathkeeper/access-rules.yml
 
