--- a/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
+++ b/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
@@ -83,3 +83,7 @@ identity:
 courier:
   smtp:
     connection_uri: smtps://test:test@mailslurper:1025/?skip_ssl_verify=true
+
+session:
+  cookie:
+    domain: v-query.com
