--- a/deployment/digitalocean/nginx.os.conf
+++ b/deployment/digitalocean/nginx.os.conf
@@ -23,3 +23,16 @@ server {
         proxy_set_header   X-Forwarded-Host $server_name;
     }
 }
+
+server {
+    server_name mail.ultimate-ecommerce.v-query.com;
+
+    location / {
+        proxy_pass         http://127.0.0.1:4436;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+    }
+}
