--- a/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
+++ b/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
@@ -1,10 +1,10 @@
-version: v0.4.6-alpha.1
+version: v0.7.1-alpha.1
 
 serve:
   public:
     base_url: http://auth.ultimate-ecommerce.v-query.com/
     cors:
-      enabled: true
+      enabled: false
   admin:
     base_url: http://kratos:4434/
 
