--- a/docker-compose.auth.digitalocean.yml
+++ b/docker-compose.auth.digitalocean.yml
@@ -28,7 +28,7 @@ services:
     environment:
       - DSN=postgres://kratos:secret@postgresd:5432/kratos?sslmode=disable&max_conns=20&max_idle_conns=4
       - LOG_LEVEL=trace
-    command: serve -c /etc/config/kratos/kratos.yml --dev --watch-courier
+    command: serve -c /etc/config/kratos/kratos.yml --watch-courier
     volumes:
       - type: bind
         source: ./deployment/digitalocean/contrib/quickstart/kratos/email-password
