--- a/deployment/digitalocean/contrib/quickstart/oathkeeper/oathkeeper.yml
+++ b/deployment/digitalocean/contrib/quickstart/oathkeeper/oathkeeper.yml
@@ -30,7 +30,7 @@ errors:
     redirect:
       enabled: true
       config:
-        to: http://127.0.0.1:4455/auth/login
+        to: https://ultimate-ecommerce.v-query.com/auth/login
         when:
           -
             error:
@@ -80,7 +80,7 @@ mutators:
   id_token:
     enabled: true
     config:
-      issuer_url: http://127.0.0.1:4455/
+      issuer_url: https://ultimate-ecommerce.v-query.com/
       jwks_url: file:///etc/config/oathkeeper/id_token.jwks.json
       claims: |
         {
