small fix for oathkeerp config

--- a/deployment/digitalocean/contrib/quickstart/oathkeeper/access-rules.yml
+++ b/deployment/digitalocean/contrib/quickstart/oathkeeper/access-rules.yml
@@ -31,7 +31,7 @@
       - DELETE
       - PATCH
   authenticators:
-    - handler: cookie_session
+#    - handler: cookie_session
     - handler: anonymous
   authorizer:
     handler: allow
