--- a/deployment/digitalocean/contrib/quickstart/oathkeeper/access-rules.yml
+++ b/deployment/digitalocean/contrib/quickstart/oathkeeper/access-rules.yml
@@ -35,8 +35,8 @@
     - handler: anonymous
   authorizer:
     handler: allow
-  mutators:
-    - handler: id_token
+#  mutators:
+#    - handler: id_token
 
 
 #
