--- a/deployment/digitalocean/contrib/quickstart/oathkeeper/access-rules.yml
+++ b/deployment/digitalocean/contrib/quickstart/oathkeeper/access-rules.yml
@@ -31,12 +31,13 @@
       - DELETE
       - PATCH
   authenticators:
-#    - handler: cookie_session
+    - handler: cookie_session
     - handler: anonymous
   authorizer:
     handler: allow
-#  mutators:
-#    - handler: id_token
+  mutators:
+    - handler: id_token
+    - handler: noop
 
 
 #
