--- a/deployment/digitalocean/contrib/quickstart/oathkeeper/access-rules.yml
+++ b/deployment/digitalocean/contrib/quickstart/oathkeeper/access-rules.yml
@@ -38,6 +38,51 @@
   mutators:
     - handler: id_token
 
+### 127.0.0.1
+
+- id: "ory:kratos:local-public"
+  upstream:
+    preserve_host: true
+    url: "http://kratos:4433"
+    strip_path: /.ory/kratos/public
+  match:
+    url: "http://127.0.0.1:3000/.ory/kratos/public/<.*>"
+    methods:
+      - GET
+      - POST
+      - PUT
+      - DELETE
+      - PATCH
+  authenticators:
+    - handler: noop
+  authorizer:
+    handler: allow
+  mutators:
+    - handler: noop
+
+- id: "ory:service-ui:local-anonymous"
+  upstream:
+    preserve_host: true
+    url: "http://service-api-gateway"
+  match:
+    url: "http://127.0.0.1:3000/<(?!.ory).*>"
+    methods:
+      - GET
+      - POST
+      - PUT
+      - DELETE
+      - PATCH
+  authenticators:
+    - handler: cookie_session
+    - handler: anonymous
+  authorizer:
+    handler: allow
+  mutators:
+    - handler: id_token
+
+
+
+
 
 #
 #-
