--- a/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
+++ b/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
@@ -2,20 +2,16 @@ version: v0.7.1-alpha.1
 
 serve:
   public:
-    base_url: https://auth.ultimate-ecommerce.v-query.com/
-    domain_aliases:
-      - match_domain: 127.0.0.1:3000
-        base_path: /
-        scheme: http
+    base_url: http://127.0.0.1:3000/
     cors:
       enabled: true
   admin:
     base_url: http://kratos:4434/
 
 selfservice:
-  default_browser_return_url: https://ultimate-ecommerce.v-query.com/
+  default_browser_return_url: http://127.0.0.1:3000/
   whitelisted_return_urls:
-    - https://ultimate-ecommerce.v-query.com
+    - http://127.0.0.1:3000
 
   methods:
     password:
@@ -23,33 +19,33 @@ selfservice:
 
   flows:
     error:
-      ui_url: https://ultimate-ecommerce.v-query.com/error
+      ui_url: http://127.0.0.1:3000/error
 
     settings:
-      ui_url: https://ultimate-ecommerce.v-query.com/settings
+      ui_url: http://127.0.0.1:3000/settings
       privileged_session_max_age: 15m
 
     recovery:
       enabled: true
-      ui_url: https://ultimate-ecommerce.v-query.com/recovery
+      ui_url: http://127.0.0.1:3000/recovery
 
     verification:
       enabled: true
-      ui_url: https://ultimate-ecommerce.v-query.com/verification
+      ui_url: http://127.0.0.1:3000/verification
       after:
-        default_browser_return_url: https://ultimate-ecommerce.v-query.com/
+        default_browser_return_url: http://127.0.0.1:3000/
 
     logout:
       after:
-        default_browser_return_url: https://ultimate-ecommerce.v-query.com/login
+        default_browser_return_url: http://127.0.0.1:3000/login
 
     login:
-      ui_url: https://ultimate-ecommerce.v-query.com/login
+      ui_url: http://127.0.0.1:3000/login
       lifespan: 10m
 
     registration:
       lifespan: 10m
-      ui_url: https://ultimate-ecommerce.v-query.com/registration
+      ui_url: http://127.0.0.1:3000/registration
       after:
         password:
           hooks:
