try on one domain

--- a/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
+++ b/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
@@ -4,7 +4,8 @@ serve:
   public:
     base_url: http://127.0.0.1:3000/
     cors:
-      enabled: true
+      enabled: false
+#      enabled: true
   admin:
     base_url: http://kratos:4434/
 
