--- a/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
+++ b/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
@@ -4,8 +4,8 @@ serve:
   public:
     base_url: http://127.0.0.1:3000/
     cors:
-      enabled: false
-#      enabled: true
+#      enabled: false
+      enabled: true
   admin:
     base_url: http://kratos:4434/
 
@@ -82,9 +82,9 @@ courier:
   smtp:
     connection_uri: smtps://test:test@mailslurper:1025/?skip_ssl_verify=true
 
-cookies:
-  domain: v-query.com
-
-session:
-  cookie:
-    domain: v-query.com
+#cookies:
+#  domain: v-query.com
+#
+#session:
+#  cookie:
+#    domain: v-query.com
