--- a/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
+++ b/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
@@ -3,6 +3,10 @@ version: v0.7.1-alpha.1
 serve:
   public:
     base_url: http://127.0.0.1:3000/
+    domain_aliases:
+      - match_domain: ultimate-ecommerce.v-query.com
+        base_path: /
+        scheme: https
     cors:
 #      enabled: false
       enabled: true
