--- a/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
+++ b/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
@@ -8,8 +8,8 @@ serve:
         base_path: /
         scheme: https
     cors:
-#      enabled: false
-      enabled: true
+      enabled: false
+#      enabled: true
   admin:
     base_url: http://kratos:4434/
 
