--- a/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
+++ b/deployment/digitalocean/contrib/quickstart/kratos/email-password/kratos.yml
@@ -3,13 +3,13 @@ version: v0.7.1-alpha.1
 serve:
   public:
     base_url: http://127.0.0.1:3000/
-    domain_aliases:
-      - match_domain: ultimate-ecommerce.v-query.com
-        base_path: /
-        scheme: https
+#    domain_aliases:
+#      - match_domain: ultimate-ecommerce.v-query.com
+#        base_path: /
+#        scheme: https
     cors:
-      enabled: false
-#      enabled: true
+#      enabled: false
+      enabled: true
   admin:
     base_url: http://kratos:4434/
 
@@ -17,7 +17,7 @@ selfservice:
   default_browser_return_url: http://127.0.0.1:3000/
   whitelisted_return_urls:
     - http://127.0.0.1:3000
-    - https://ultimate-ecommerce.v-query.com
+#    - https://ultimate-ecommerce.v-query.com
 
   methods:
     password:
