--- a/service-boarding/src/main/resources/application.properties
+++ b/service-boarding/src/main/resources/application.properties
@@ -18,3 +18,7 @@ spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
 #spring.datasource.password=service-boarding-db
+##########################
+#  Swagger               #
+##########################
+springfox.documentation.swagger.v2.path=/api/service-boarding/v2/api-doc
