--- a/service-product/src/main/resources/application.properties
+++ b/service-product/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.data.mongodb.uri=${MONGO_DB_URI}
 #  Elasticsearch         #
 ##########################
 spring.elasticsearch.rest.uris=${ELASTICSEARCH_URL}
+##########################
+#  Swagger               #
+##########################
+springfox.documentation.swagger.v2.path=/api/service-product/v2/api-doc
