--- a/service-api-gateway/templates/nginx.conf.template
+++ b/service-api-gateway/templates/nginx.conf.template
@@ -20,8 +20,17 @@ server {
         proxy_set_header   X-Forwarded-Host $server_name;
     }
 
-    location /api {
-        proxy_pass         ${BACKEND_ENDPOINT}/api;
+    location /api/service-product {
+        proxy_pass         ${SERVICE_PRODUCT_ENDPOINT}/api/service-product;
+        proxy_redirect     off;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Real-IP $remote_addr;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Host $server_name;
+    }
+
+    location /api/service-boarding {
+        proxy_pass         ${SERVICE_BOARDING_ENDPOINT}/api/service-boarding;
         proxy_redirect     off;
         proxy_set_header   Host $host;
         proxy_set_header   X-Real-IP $remote_addr;
