--- a/service-ui/package.json
+++ b/service-ui/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "formik": "^2.2.9",
     "husky": "^7.0.2",
     "lint-staged": "^11.1.2",
     "notistack": "^2.0.2",
