--- a/service-boarding/src/main/resources/application.properties
+++ b/service-boarding/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.datasource.password=${DATABASE_PASSWORD}
 #  Swagger               #
 ##########################
 springfox.documentation.swagger.v2.path=/api/service-boarding/v2/api-doc
+##########################
+#  Elasticsearch         #
+##########################
+spring.elasticsearch.rest.uris=${ELASTICSEARCH_URL}
